@@ -1,2 +1,4 @@
+  allow for empty lines in the input file (as for gnuplot)
+
 version 0.1 (14 September 2010)
   initial release
